--- a/promise/index.html
+++ b/promise/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 <head>
     <title>Demo-Promise</title>
+    <style>
+        :root {
+            --background-color: #323a40;
+        }
+        html {
+            background: var(--background-color);
+        }
+    </style>
 </head>
 <body>
 <script src="promise.js"></script>
