--- a/Flex/flex.html
+++ b/Flex/flex.html
@@ -38,5 +38,16 @@
 <div>
     <img src="http://xqproduct.xiangqu.com/FiDY6WUFo17OXAan5Ez44BRQWQZL?imageView2/2/w/205/q/90/format/jpg/205x360/" alt="">
 </div>
+<script>
+    alert(a)
+    a()
+    var a = 3
+    function a(){
+        alert(10)
+    }
+    alert(a)
+    a = 6
+    a()
+</script>
 </body>
 </html>
