--- a/background/index.html
+++ b/background/index.html
@@ -57,7 +57,9 @@
         .positioned .box{
             background-position:top left;
         }
-        .box span{color:#fff; text-align:center; display:block; font-size:20px; font-weight:bold; height:100%; background-color:rgba(256,256,256,0.5);}
+        .box span{
+            color:#fff; text-align:center; display:block; font-size:20px; font-weight:bold; height:100%; background-color:rgba(256,256,256,0.5);
+        }
 
         .box1{
             background-clip:padding-box;
@@ -182,5 +184,8 @@
     </div>
 
 </div>
+<script>
+
+</script>
 </body>
 </html>
